Fix document test failures on Flying Saucer fusion stack.
Expose PDFBox introspection via registered CFML functions, restore bookmark outline collection for documentItem and htmlbookmark, fix srcfile base URLs, and align FS-specific test expectations.

Co-authored-by: Cursor <cursoragent@cursor.com>